<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapWars</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email address</string>
    <string name="home_login_button">Login</string>
    <string name="home_login_error">Invalid Login</string>
    <string name="home_register_button">Register</string>
    <string name="home_register_title">Registration</string>
    <string name="home_register_info">Don\'t have an account? Don\'t worry, fill in the form below to register and concour the world!!</string>

</resources>