<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical|none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
        	android:background="@drawable/mainrepeat"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

   <!--         <TextView
                android:id="@+id/login_error"
                android:layout_width="wrap_content"
                android:layout_height="0px"
                android:layout_marginBottom="10dp"
                android:text="@string/home_login_error"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FF0000" /> -->
            
            <EditText
                style="@style/DefaultInput"
                android:id="@+id/login_user"
                android:hint="@string/username" />

            <EditText
                style="@style/DefaultInput"
                android:id="@+id/login_pass"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="25dp"
                android:text="@string/home_login_button" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_register_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/home_register_info" />

            <EditText
                style="@style/DefaultInput"
                android:id="@+id/reg_username"
                android:hint="@string/username" />

            <EditText
                style="@style/DefaultInput"
                android:id="@+id/reg_email"
                android:hint="Email address" />

            <EditText
                style="@style/DefaultInput"
                android:id="@+id/reg_pass"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                style="@style/DefaultInput"
                android:id="@+id/reg_pass_2"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/reg_button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="20dp"
                android:text="@string/home_register_button" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
